--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,25 @@
 .cache/
+.calc_history
 .dotfiles/
-.vscode-oss/
-Downloads/
-Desktop/
-Music/
-tmp/
+.git-credentials
 .gnupg/
 .lesshst
+.lyrics/
+.mozilla/
+.mpd/
+.npm/
 .p10k.zsh
+.pki/
+.surf/
+.vim_mru_files
+.vim/
 .viminfo
+.vscode-oss/
 .wget-hsts
 .Xauthority
 .zcompdump*
 .zsh_history
-.mpd/
-.pki/
-.lyrics/
-.mozilla/
-.git-credentials
-.calc_history
-.surf
-.vim_mru_files
-.vim
+Desktop/
+Downloads/
+Music/
+tmp/
