--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".oh-my-zsh"]
 	path = .oh-my-zsh
 	url = https://github.com/abdes/ohmyzsh.git
+[submodule ".config/nvim"]
+	path = .config/nvim
+	url = https://github.com/abdes/nvim.git
